change accordion content order

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -135,15 +135,6 @@
 
         <div class="accordion__body">
           <h3 class="heading-medium">
-            Measure explanation
-          </h3>
-          <p>The rate of UK unemployment as a percentage of the potential labour force</p>
-
-          <p>Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks.</p>
-
-          <p>The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation.</p>
-
-          <h3 class="heading-medium">
             Summary
           </h3>
 
@@ -167,74 +158,17 @@
     </div>
 
     <div class="accordions-container container">
-
       <div class="accordion">
         <div class="accordion__header">
-          <h2><button> Publishing details</button></h2>
-          <span class="plus-minus-icon"></span>
-        </div>
-
-        <div class="accordion__body">
-          <div class="govuk-metadata">
-            <dl>
-              <dt> From:</dt> <dd><a href="#">
-              2011 Census and the Labour Force Survey (LFS)</a></dd>
-              <dt>First Published: </dt> <dd>13/11/2014</dd>
-              <dt>Last Updated: </dt> <dd>11/12/2015</dd>
-              <dt> Revisions:</dt> <dd> <a href="#">National Archive</a></dd>
-              <dt> Next Update:</dt> <dd> 01/07/2017</dd>
-              <dt> Frequency:</dt> <dd> Ad Hoc</dd>
-              <dt> Contact:</dt> <dd> gabriel.kite@dwp.gsi.gov.uk</dd>
-              <dt> Related Publications:</dt> <dd><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/ethnicity/articles/ethnicityandthelabourmarket2011censusenglandandwales/previousReleases"> Official Statistic </a> </dd>
-            </dl>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordions-container container">
-      <div class="accordion">
-        <div class="accordion__header">
-          <h2><button> Background</button></h2>
+          <h2><button> Things you need to know</button></h2>
            <span class="plus-minus-icon"></span>
         </div>
 
         <div class="accordion__body">
-          <h3 class="heading-medium"> How this is measured</h3>
-          <p>
-            The level and rate of UK unemployment measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation. Unemployed people as those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks.
-          </p>
-          <h3 class="heading-medium"> Things you need to know </h3>
-
           <p>
             Unemployment figures are survey based. Smaller numbers of respondents from ethnic
             minority backgrounds mean that unemployment estimates for ethnic minorities are more
             volatile than estimates for white people.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordions-container container">
-      <div class="accordion">
-        <div class="accordion__header ">
-          <h2><button> Ethnicity definitions</button></h2>
-           <span class="plus-minus-icon"></span>
-        </div>
-
-        <div class="accordion__body">
-          <h3 class="heading-medium"> Ethnicity categories used in this analysis
-          </h3>
-
-          <p>
-          <!-- TODO KASM find link for this -->
-           We are using the categories from the <a href ="#">Labour Force Survey</a> which are: White, Black, Mixed or multiple, Indian, Pakistani/Bangladeshi, Chinese, Other Asian, Other, Unknown. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups.
-          </p>
-
-          <h3 class="heading-medium">Further information</h3>
-
-          <p>
-            Chinese moved from Other ethnic group to the Asian category in 2011, therefore Chinese has been included under Asian for the years preceding 2011; New tick boxes were also introduced for Gypsy or Irish Traveller under White and Arab under Other ethnic group
           </p>
         </div>
       </div>
@@ -285,6 +219,31 @@
           For all ethnic groups shown in the table the unemployment rate was higher among 16-24
           year olds than for other age groups. </p>
 
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header ">
+          <h2><button> Ethnicity definitions</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <h3 class="heading-medium"> Ethnicity categories used in this analysis
+          </h3>
+
+          <p>
+          <!-- TODO KASM find link for this -->
+           We are using the categories from the <a href ="#">Labour Force Survey</a> which are: White, Black, Mixed or multiple, Indian, Pakistani/Bangladeshi, Chinese, Other Asian, Other, Unknown. Other ethnic background includes those who responded Chinese, other, other Asian background and mixed/multiple ethnic groups.
+          </p>
+
+          <h3 class="heading-medium">Further information</h3>
+
+          <p>
+            Chinese moved from Other ethnic group to the Asian category in 2011, therefore Chinese has been included under Asian for the years preceding 2011; New tick boxes were also introduced for Gypsy or Irish Traveller under White and Arab under Other ethnic group
+          </p>
         </div>
       </div>
     </div>
@@ -372,6 +331,32 @@
           <p>Full-time education (FTE): FTE is defined as those who are either (1) at school (fulltime),
           (2) on a sandwich course or (3) in full time university or college education.</p>
 
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button> Publishing details</button></h2>
+          <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <div class="govuk-metadata">
+            <dl>
+              <dt> From:</dt> <dd><a href="#">
+              2011 Census and the Labour Force Survey (LFS)</a></dd>
+              <dt>First Published: </dt> <dd>13/11/2014</dd>
+              <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+              <dt> Revisions:</dt> <dd> <a href="#">National Archive</a></dd>
+              <dt> Next Update:</dt> <dd> 01/07/2017</dd>
+              <dt> Frequency:</dt> <dd> Ad Hoc</dd>
+              <dt> Contact:</dt> <dd> gabriel.kite@dwp.gsi.gov.uk</dd>
+              <dt> Related Publications:</dt> <dd><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/ethnicity/articles/ethnicityandthelabourmarket2011censusenglandandwales/previousReleases"> Official Statistic </a> </dd>
+            </dl>
+          </div>
         </div>
       </div>
     </div>
