--- a/app/assets/stylesheets/measure.scss
+++ b/app/assets/stylesheets/measure.scss
@@ -17,10 +17,22 @@
 
 }
 
+#accordion-all-control {
+  text-align: center;
+  margin-left:85%;
 
+  cursor:pointer;
+  border:none;
+  font-size:16px;
+  font-weight:400;
+  background:none;
+  color: $link-colour;
+  display:block;
+}
 
 .accordions-container {
   border-bottom: 1px solid $grey-2;
+
 }
 
 .accordion__header {
