--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -122,9 +122,11 @@
 
 <div class="grid-row">
   <div class="column-two-thirds">
-     <h3 class="heading-medium"> Learn about this measure</h3>
+    <h3 class="heading-medium"> Learn about this measure</h3>
 
     <p>Find out what this measure means, get a summary of the key insights, read the key trends for each of the above graphs and find out how the data was collected.</p>
+
+    <button id="accordion-all-control" > Open all</button>
 
     <div class="accordions-container container">
       <div class="accordion">
@@ -336,7 +338,6 @@
     </div>
 
     <div class="accordions-container container">
-
       <div class="accordion">
         <div class="accordion__header">
           <h2><button> Publishing details</button></h2>
@@ -377,7 +378,6 @@
         </div>
       </div>
   </div>
-
 </div>
 
 <div id="unemployment"></div>
