--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -7,6 +7,15 @@
   img { width: 80%; }
 }
 
+.related-items-section {
+  border-top: 10px solid $govuk-blue;
+  h2 {
+    font-size:24px;
+    line-height:1.25;
+    font-weight:700;
+  }
+}
+
 #location-section{
     img {
     width: 100%;
