--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -9,32 +9,6 @@
 
 <h1 class="heading-large"> Average GCSE results (Attainment 8)</h1>
 
-<div class="grid-row">
-  <div class="column-whole">
-    <div class="govuk-metadata">
-      <dl>
-        <dt> From:</dt> <dd><a href="<%= @presenter.source_link %>">
-        <%= @presenter.source_title %></a></dd>
-        <dt>First Published: </dt> <dd><%= @presenter.date %></dd>
-        <dt>Last Updated: </dt> <dd><%= @presenter.date %></dd>
-      </dl>
-    </div>
-  </div>
-</div>
-
-
-<p>
- Attainment 8 measures the students’ average grades across eight GCSE or equivalent subjects, which must include English and Mathematics.
-</p>
-
-<p>
- Results are calculated from a combination of student grades where A* = 8, A = 7, B = 6, C = 5, and so on. English and Mathematics scores are doubled, to prioritise their importance in the national curriculum. Find out more about
-
-  <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/583857/Progress_8_school_performance_measure_Jan_17.pdf">how Attainment 8 is measured.</a>
-</p>
-
-<p>The highest possible score for this measure is 8, the lowest score is 0.</p>
-
 <div class="grid-row question-tabs" id="navigation-tabs">
   <ul class="tabs-nav">
     <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
@@ -45,19 +19,39 @@
   </ul>
 </div>
 
-<div class="grid-row graph-section" id="ethnicity-section">
-  <div class="column-whole question-graph">
-  <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
-</div>
-<!--   <div class="column-one-half question-graph">
-    <img src="/assets/images/attainment8/Table_1_GCSE_Average_by_Ethnicity.png" alt="">
-  </div> -->
+<div class="grid-row">
+  <div class="graph-section" id="ethnicity-section">
+    <div class="column-whole question-graph">
+      <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+      <div class="column-whole">
+        <div class="govuk-metadata">
+          <dl>
+            <dt> Source:</dt> <dd><a href="#">
+            Department for Education</a></dd>
+            <dt>Last Updated: </dt> <dd>13/10/2016</dd>
+          </dl>
+          <a href="#"> Download source data </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
 </div>
 
 <div class="graph-section" id="gender-section">
   <div class="grid-row" >
     <div class="column-whole question-graph">
       <div id="gender-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
+    </div>
+    <div class="column-whole">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+          Department for Education</a></dd>
+          <dt>Last Updated: </dt> <dd>13/10/2016</dd>
+        </dl>
+        <a href="#"> Download source data </a>
+      </div>
     </div>
   </div>
 </div>
@@ -66,6 +60,16 @@
   <div class="column-whole question-graph">
       <div id="heatmap-container" style="max-width: 800px; height: 500px; margin: 0 auto"></div>
   </div>
+  <div class="column-whole">
+    <div class="govuk-metadata">
+      <dl>
+        <dt> Source:</dt> <dd><a href="#">
+        Department for Education</a></dd>
+        <dt>Last Updated: </dt> <dd>13/10/2016</dd>
+      </dl>
+      <a href="#"> Download source data </a>
+    </div>
+  </div>
 </div>
 
 <div class="grid-row graph-section" id="income-section">
@@ -73,46 +77,227 @@
   <div class="column-whole question-graph">
       <div id="fsm-pyramid-container" style="max-width: 800px; height: 800px; margin: 0 auto"></div>
   </div>
+
+  <div class="column-whole">
+    <div class="govuk-metadata">
+      <dl>
+        <dt> Source:</dt> <dd><a href="#">
+        Department for Education</a></dd>
+        <dt>Last Updated: </dt> <dd>13/10/2016</dd>
+      </dl>
+      <a href="#"> Download source data </a>
+    </div>
+  </div>
 </div>
 
 
 <div class="grid-row">
-  <div class="column-whole">
-  </div>
+  <div class="column-two-thirds">
+     <h3 class="heading-medium"> Learn about this measure</h3>
 
-    <p>Find out <a href= "https://www.ons.gov.uk/ons/guide-method/measuring-equality/equality/measuring-equality--a-guide/ethnic-group-statistics--a-guide-for-the-collection-and-classification-of-ethnicity-data.pdf">how we collect and report on race. </a> </p>
+    <p>Find out what this measure means, get a summary of the key insights, read the key trends for each of the above graphs and find out how the data was collected.</p>
 
-    <p>
-      Race categories may be combined depending on how the information was collected or to show a value for the whole group. For example, Black Caribbean, Black African and Black other may sometimes be combined into one category, as "Black".
-    </p>
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header" >
+          <h2><button> Overview</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
 
-    <h3 class="heading-medium"> Summary </h3>
+        <div class="accordion__body">
+          <h3 class="heading-medium">
+            Measure explanation
+          </h3>
 
-    <p>
-      Girls are ahead of boys and the highest-performing local authority areas for attainment 8 are concentrated in London and the south, while the majority of the lowest-performing areas are in the north and midlands.
-    </p>
+          <p>National Assessment Score. </p>
 
-    <p>
-      The GCSE and equivalent results continue to vary between different race groups. Within each of these broader race groupings, the minor race groups show further variability:
-    </p>
+          <p>Attainment 8 measures the achievement of a pupil across 8 qualifications including mathematics (double weighted) and English (double weighted), 3 further qualifications that count in the English Baccalaureate (EBacc) measure and 3 further qualifications that can be GCSE qualifications (including EBacc subjects) or technical awards from the DfE approved list. </p>
 
-    <ul class="list-bullet">
-      <li>Chinese pupils are the highest achieving group.</li>
-      <li> Pupils from a black background are the lowest performing group although black pupils are progressing above the national average.</li>
-      <li>Pupils from an Asian background are performing above the national average.</li>
-      <li>Pupils from a mixed background are also performing above the national level.</li>
-      <li>Within the minor race groupings, Indian pupils are performing well above the national average </li>
-      <li>Gypsy/Roma pupils are the lowest performers.</li>
-    </ul>
-  <br>
-  <br>
-  <p> <a href="http://www.gov.uk">Download data in csv or xls format</a> for all of England or a local authority.</p>
+          <h3 class="heading-medium">
+            Summary
+          </h3>
 
-  <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
-  </p>
+          <ul class="list-bullet">
+            <li> 79.0% of pupils at the end of key stage 418 are white, 9.6% are Asian, 5.2% are black, 4.3% are mixed, 0.4% are Chinese, and 1.5% are any other ethnic group. </li>
+
+            <li> Both White and Black students fell below the national average attainment 8 score for state-funded schools.</li>
+
+            <li> Chinese students had the highest attainment 8 score for state-funded schools.</li>
+          </ul>
+
+          <h3 class="heading-medium"> Coverage </h3>
+
+          England
+
+          <h3 class="heading-medium">
+            Timeframe
+          </h3>
+
+          2015-2016
+        </div>
+      </div>
+    </div>
+
+
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button> Background</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <h3 class="heading-medium"> How this is measured</h3>
+          <p>
+            Attainment 8 measures the achievement of a pupil across 8 qualifications including mathematics (double weighted) and English (double weighted), 3 further qualifications that count in the English Baccalaureate (EBacc) measure and 3 further qualifications that can be GCSE qualifications (including EBacc subjects) or any other non-GCSE qualifications on the DfE approved list. Each individual grade a pupil achieves is assigned a point score, which is then used to calculate a pupil’s Attainment 8 score
+          </p>
+          <h3 class="heading-medium"> Things you need to know </h3>
+
+          <p>
+            In 2016 a new secondary school accountability system was implemented. It includes two new headline measures: Attainment 8 and Progress 8. Schools had the option to adopt the new performance measures a year early in 2015. A list of schools that opted in early to the Progress 8 measure can be found here. From 2016, the headline indicator of school performance determining the floor standard is Progress 8. This replaces the previous headline measure, 5+ A* to C including English and maths.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button>Main trends</button></h2>
+          <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+
+          <h3 class="heading-medium">Ethnicity</h3>
+
+          For state funded schools:
+
+          <ul class="list-bullet">
+            <li>Chinese pupils had the highest average Attainment 8 score of 62.4 </li>
+            <li>The average Attainment 8 score was 49.9. Both White and Black students fell below this.</li>
+            <li>Gypsy/Roma students had the lowest Attainment 8 score of 20.4, three times less than for Chinese students. </li>
+          </ul>
+
+          <h3 class="heading-medium"> Gender </h3>
+
+          <ul class="list-bullet">
+            <li>Average Attainment 8 score was higher for girls than for boys across all ethnic groups. Girls were 4.6 points higher than boys at 52.3 for all ethnic groups</li>
+
+            <li>Chinese girls had the highest attainment 8 score at 64.8. Gypsy/Roma boys had the lowest attainment 8 score at 19.1.</li>
+
+            <li> The smallest difference in attainment 8 scores between genders was in the Gypsy/Roma ethnic group where girls scored 2.5 points higher. The largest difference was for "any other Black background" where girls scored 7.2 points higher.  </li>
+          </ul>
+
+          <h3 class="heading-medium"> Free school meals</h3>
+
+          <p>Average Attainment 8 score was lower for children eligible for free school meals than for others across all ethnic groups (with the exception of Gypsy/Roma children). Children eligible for free school meals had an average attainment score of 39.0, 12.6 points lower than for other children.</p>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header ">
+          <h2><button> Ethnicity definitions</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <h3 class="heading-medium"> Ethnicity categories used in this analysis
+          </h3>
+
+          <p>
+            Data is collected using the following breakdown: White British, White Irish, Traveler of Irish Heritage, Gypsy/Roma, Other White, White and Black Caribbean, White and Black African, White and Asian, Other Mixed background, Indian, Pakistani, Bangladeshi, Other Asian Background, Black African, Black Carribbean, Other Black background, Chinese, Other Background, Unclassified
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header ">
+          <h2><button> Technical information</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+        <div class="accordion__body">
+          <h3 class="heading-medium">
+            Methodology
+          </h3>
+
+          <p>The data shows figures for the labour market status of people aged 16 and over,
+          covering annual averages between 1993 and 2015 (excluding 2001). The data is all
+          drawn from the Labour Force Survey and broken down by ethnic group, as reported
+          by survey respondents. All data is for Great Britain and has not been seasonally
+          adjusted.</p>
+
+          <p>Results derived from a low number of responses are more likely to be affected by
+          statistical variation, so observed changes might not reflect real differences. As such, caution is needed when interpreting short-term trends in the data especially for sub
+          groups (for example, a particular ethnicity, age group and gender). Any values based
+          on fewer than five responses have been completely suppressed. Values based on 5-
+          10 responses are shown, but marked by an asterisk (*). These should be used with
+          particular caution. </p>
+
+          <h3 class="heading-medium">
+            Type of data
+          </h3>
+
+          Administrative
+
+          <h3 class="heading-medium">Population</h3>
+
+          <p>The statistics in this release cover the data collated for the 2016 secondary school performance tables. The performance tables and this release report results based on pupils at the end of key stage 4, who are typically aged 15 at the start of the academic year. The coverage of the local authority (LA) and regional statistics is statefunded schools only in England. This includes city technology colleges and academies but excludes hospital schools, pupil referral units and alternative provision.</p>
+
+          <h3 class="heading-medium">Disclosure control</h3>
+
+          <p>We preserve confidentiality. The Code of Practice for Official Statistics requires us to take reasonable steps to ensure that our published or disseminated statistics protect confidentiality.</p>
+
+          <h3 class="heading-medium"> Suppression rules</h3>
+
+          <p> Values of 1 or 2, or a percentage based on 1 or 2 pupils who achieved; or 0, 1 or 2 pupils who did not achieve a particular level are suppressed in circumstances where non-suppression would lead to disclosure of pupils. Some additional figures have been suppressed to prevent the possibility of a suppressed figure being revealed.</p>
+          <p>
+          This suppression is consistent with our Statistical policy statement on
+          confidentiality.  </p>
+
+          <h3 class="heading-medium"> Estimation </h3>
+
+          <p> We round figures Percentages in this SFR are given to one decimal place. </p>
+
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button> Publishing details</button></h2>
+          <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <div class="govuk-metadata">
+            <dl>
+              <dt> From:</dt> <dd><a href="#">
+              2011 Census and the Labour Force Survey (LFS)</a></dd>
+              <dt>First Published: </dt> <dd>13/11/2014</dd>
+              <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+              <dt> Revisions:</dt> <dd> <a href="#">National Archive</a></dd>
+              <dt> Next Update:</dt> <dd> 01/07/2017</dd>
+              <dt> Frequency:</dt> <dd> Ad Hoc</dd>
+              <dt> Contact:</dt> <dd> gabriel.kite@dwp.gsi.gov.uk</dd>
+              <dt> Related Publications:</dt> <dd><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/culturalidentity/ethnicity/articles/ethnicityandthelabourmarket2011censusenglandandwales/previousReleases"> Official Statistic </a> </dd>
+            </dl>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+
 </div>
-
-
 
 <!-- Makes it run attainment js, extremely hacky fix this TODO: KASM -->
 <div id="attainment"></div>
