updates for lab 7

--- a/app/views/homepage/index.html.erb
+++ b/app/views/homepage/index.html.erb
@@ -11,9 +11,15 @@
       Government departments collect data and run surveys which include information on ethnicity. This is the first time that this data has been collected together and shown openly in one place.
     </p>
 
-    <p>
-      Black people are six times more likely to be stopped and searched by police. Young Bangladeshis and Pakistanis are <a href="/unemployment rate">twice as likely to be unemployed </a> as white people of the same age.
+    <div class="grid-row">
+      <div class="column-half quote">
+      Black people are six times more likely to be stopped and searched by police.
+      </div>
+
+      <div class="column-half quote"> Young Bangladeshis and Pakistanis are <a href="/unemployment rate">twice as likely to be unemployed </a> as white people of the same age
+      .</div>
     </p>
+    </div>
 
     <p>
       Now government departments and other organisations can see where there are differences and where there is a need for change in order to have a fairer Britain.
