--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -14,6 +14,20 @@
     line-height:1.25;
     font-weight:700;
   }
+
+  li {
+    margin-bottom:1.25em;
+    font-size:16px;
+  }
+}
+
+.quote{
+  margin-top:20px;
+  margin-bottom:20px;
+  height:120px;
+  width:40%;
+  margin-left: 10px;
+  border-left: 10px solid $grey-1;
 }
 
 #location-section{
