sanity check accordion ordering

--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -127,36 +127,13 @@
 
           <h3 class="heading-medium"> Coverage </h3>
 
-          England
+            England
 
           <h3 class="heading-medium">
             Timeframe
           </h3>
 
           2015-2016
-        </div>
-      </div>
-    </div>
-
-
-
-    <div class="accordions-container container">
-      <div class="accordion">
-        <div class="accordion__header">
-          <h2><button> Background</button></h2>
-           <span class="plus-minus-icon"></span>
-        </div>
-
-        <div class="accordion__body">
-          <h3 class="heading-medium"> How this is measured</h3>
-          <p>
-            Attainment 8 measures the achievement of a pupil across 8 qualifications including mathematics (double weighted) and English (double weighted), 3 further qualifications that count in the English Baccalaureate (EBacc) measure and 3 further qualifications that can be GCSE qualifications (including EBacc subjects) or any other non-GCSE qualifications on the DfE approved list. Each individual grade a pupil achieves is assigned a point score, which is then used to calculate a pupil’s Attainment 8 score
-          </p>
-          <h3 class="heading-medium"> Things you need to know </h3>
-
-          <p>
-            In 2016 a new secondary school accountability system was implemented. It includes two new headline measures: Attainment 8 and Progress 8. Schools had the option to adopt the new performance measures a year early in 2015. A list of schools that opted in early to the Progress 8 measure can be found here. From 2016, the headline indicator of school performance determining the floor standard is Progress 8. This replaces the previous headline measure, 5+ A* to C including English and maths.
-          </p>
         </div>
       </div>
     </div>
@@ -194,6 +171,22 @@
 
           <p>Average Attainment 8 score was lower for children eligible for free school meals than for others across all ethnic groups (with the exception of Gypsy/Roma children). Children eligible for free school meals had an average attainment score of 39.0, 12.6 points lower than for other children.</p>
 
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button> Things you need to know</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+
+          <p>
+            In 2016 a new secondary school accountability system was implemented. It includes two new headline measures: Attainment 8 and Progress 8. Schools had the option to adopt the new performance measures a year early in 2015. A list of schools that opted in early to the Progress 8 measure can be found here. From 2016, the headline indicator of school performance determining the floor standard is Progress 8. This replaces the previous headline measure, 5+ A* to C including English and maths.
+          </p>
         </div>
       </div>
     </div>
