--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -137,6 +137,20 @@
 
         <div class="accordion__body">
           <h3 class="heading-medium">
+            Measure explanation
+          </h3>
+          <p>
+           The rate of UK unemployment as a percentage of the potential labour force
+          </p>
+
+          <p>
+            Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks. Find out more about
+            <a href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment">how unemployment is measured.</a>
+          </p>
+
+          <p>The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation. </p>
+
+          <h3 class="heading-medium">
             Summary
           </h3>
 
@@ -154,23 +168,6 @@
 
 
           <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
-          </p>
-        </div>
-      </div>
-    </div>
-
-    <div class="accordions-container container">
-      <div class="accordion">
-        <div class="accordion__header">
-          <h2><button> Things you need to know</button></h2>
-           <span class="plus-minus-icon"></span>
-        </div>
-
-        <div class="accordion__body">
-          <p>
-            Unemployment figures are survey based. Smaller numbers of respondents from ethnic
-            minority backgrounds mean that unemployment estimates for ethnic minorities are more
-            volatile than estimates for white people.
           </p>
         </div>
       </div>
@@ -221,6 +218,23 @@
           For all ethnic groups shown in the table the unemployment rate was higher among 16-24
           year olds than for other age groups. </p>
 
+        </div>
+      </div>
+    </div>
+
+    <div class="accordions-container container">
+      <div class="accordion">
+        <div class="accordion__header">
+          <h2><button> Things you need to know</button></h2>
+           <span class="plus-minus-icon"></span>
+        </div>
+
+        <div class="accordion__body">
+          <p>
+            Unemployment figures are survey based. Smaller numbers of respondents from ethnic
+            minority backgrounds mean that unemployment estimates for ethnic minorities are more
+            volatile than estimates for white people.
+          </p>
         </div>
       </div>
     </div>
