--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -71,13 +71,13 @@
 }
 
 .factoid-question {
-  width: 60%;
+  // width: 60%;
   float: left;
 }
 
 .factoid-result {
   width: 20%;
-  float: left;
+  // float: left;
   text-align:right;
 }
 
@@ -87,9 +87,8 @@
 
 .row-container {
   .row-description {
-    width:60%;
     text-align:left;
-    float:left;
+    // float:left;
   }
 
 }
