--- a/app/views/taxonomy_level/smoking.html.erb
+++ b/app/views/taxonomy_level/smoking.html.erb
@@ -11,11 +11,68 @@
   Smoking prevalence at age 15
 </h1>
 
-<div class="graph-section" id="ethnicity-section">
+<div class="grid-row question-tabs" id="navigation-tabs">
+  <div class="column-two-thirds">
+    <div class = "tabs-container">
+
+      <ul class="tabs-nav">
+        <li id="current-selector"><a href="#current-section"> Current </a></li>
+        <li id="regular-selector"><a href="#gender-section">Regular </a></li>
+        <li id="occasional-selector"><a href="#occasional-section">Occasional </a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+
+<div class="graph-section" id="current-section">
+  <h3 class="heading-medium"> Current smokers </h3>
   <div class="grid-row">
     <div class="column-two-thirds question-graph">
 
       <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+    </div>
+
+    <div class="column-whole">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+            What About YOUth (WAY) survey 2015</a></dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+        </dl>
+        <a href="#"> Download source data </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="graph-section" id="regular-section">
+  <h3 class="heading-medium"> Regular smokers </h3>
+  <div class="grid-row">
+    <div class="column-two-thirds question-graph">
+
+      <div id="regular" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+    </div>
+
+    <div class="column-whole">
+      <div class="govuk-metadata">
+        <dl>
+          <dt> Source:</dt> <dd><a href="#">
+            What About YOUth (WAY) survey 2015</a></dd>
+          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+        </dl>
+        <a href="#"> Download source data </a>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="graph-section" id="occasional-section">
+  <h3 class="heading-medium"> Occasional smokers </h3>
+  <div class="grid-row">
+    <div class="column-two-thirds question-graph">
+
+      <div id="occasional" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
     </div>
 
     <div class="column-whole">
