--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -1,4 +1,5 @@
 
+<div id="<%= @js_flag %>"></div>
 <div class="breadcrumbs">
   <ol>
     <% @taxonomy_level.breadcrumbs.each do |crumb| %>
@@ -394,4 +395,3 @@
   </div>
 </div>
 
-<div id="unemployment"></div>
