--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -20,37 +20,38 @@
     <div class = "tabs-container">
 
       <ul class="tabs-nav">
-        <li id="ethnicity-selector"><a href="#ethnicity-section"> All </a></li>
-        <li id="gender-selector"><a href="#gender-section">Gender </a></li>
-        <li id="age-bracket-selector"><a href="#age-section">Age bracket </a></li>
-        <li id="time-selector"><a href="#time-section">Time Series </a></li>
+        <% @chart_tabs.each do |tab| %>
+          <li id="<%= tab["id"]%>-selector"><a href="#ethnicity-section"> <%=tab["title"]%> </a></li>
+        <% end %>
       </ul>
     </div>
   </div>
 </div>
+<% @chart_tabs.each do |tab| %>
+  <div class="graph-section" id="<%= tab["id"] %>-section">
+    <div class="grid-row">
+      <div class="column-two-thirds question-graph">
+        <h3 class="heading-medium">
+          All
+        </h3>
 
-<div class="graph-section" id="ethnicity-section">
-  <div class="grid-row">
-    <div class="column-two-thirds question-graph">
-      <h3 class="heading-medium">
-        All
-      </h3>
+        <div id="<%= tab["container"] %>" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
+      </div>
 
-      <div id="container" style="max-width: 800px; height: 600px; margin: 0 auto"></div>
-    </div>
-
-    <div class="column-whole">
-      <div class="govuk-metadata">
-        <dl>
-          <dt> Source:</dt> <dd><a href="#">
-          2011 Census and the Labour Force Survey (LFS)</a></dd>
-          <dt>Last Updated: </dt> <dd>11/12/2015</dd>
-        </dl>
-        <a href="#"> Download source data </a>
+      <div class="column-whole">
+        <div class="govuk-metadata">
+          <dl>
+            <dt> Source:</dt> <dd><a href="#">
+            2011 Census and the Labour Force Survey (LFS)</a></dd>
+            <dt>Last Updated: </dt> <dd>11/12/2015</dd>
+          </dl>
+          <a href="#"> Download source data </a>
+        </div>
       </div>
     </div>
   </div>
-</div>
+
+<% end %>
 
 
 <div class="graph-section" id="gender-section">
@@ -140,16 +141,7 @@
           <h3 class="heading-medium">
             Measure explanation
           </h3>
-          <p>
-           The rate of UK unemployment as a percentage of the potential labour force
-          </p>
-
-          <p>
-            Unemployed people are those without a job who have been actively seeking work in the past 4 weeks and are available to start work in the next 2 weeks. It also includes those who are out of work but have found a job and are waiting to start it in the next 2 weeks. Find out more about
-            <a href="https://www.ons.gov.uk/employmentandlabourmarket/peoplenotinwork/unemployment">how unemployment is measured.</a>
-          </p>
-
-          <p>The level and rate of UK unemployment are measured by the Labour Force Survey (LFS) using a definition of unemployment specified by the International Labour Organisation. </p>
+          <%=raw  @measure_summary %>
 
           <h3 class="heading-medium">
             Summary
@@ -395,3 +387,4 @@
   </div>
 </div>
 
+</div>
