Markdown fields for measure_explanation + overall_summary

--- a/app/views/taxonomy_level/show.html.erb
+++ b/app/views/taxonomy_level/show.html.erb
@@ -141,27 +141,13 @@
           <h3 class="heading-medium">
             Measure explanation
           </h3>
-          <%=raw  @measure_summary %>
+          <%=raw @measure_explanation %>
 
           <h3 class="heading-medium">
             Summary
           </h3>
+          <%=raw @overall_summary %>
 
-           <p>
-            Unemployment has decreased over the past three years for most groups, with the exception of Indian and other Asian people, who have seen a small increase in unemployment. Younger people across all backgrounds have a significantly higher rate of unemployment.
-          </p>
-
-          <p>
-            In 2015, ethnic minorities have higher rates of unemployment, with people from a black background having the highest unemployment rate at 14%.
-          </p>
-
-          <p>
-            Whilst unemployment for both men and women is just above 5% in the UK, black men are more likely to be unemployed than black women, and Pakistani or Bangladeshi women are far more likely to be unemployed than Pakistani or Bangladeshi men.
-          </p>
-
-
-          <p>Read the <a href="/attainment8/metadata">further information and guidance </a>about the data in the tables.
-          </p>
         </div>
       </div>
     </div>
