--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -77,10 +77,10 @@
             <div class= "column-two-thirds">
              <h1 class="heading-xlarge"> 
               <!--%= @title %--> 
-              Race disparity in public&nbsp;services
+              Data on race disparity in public&nbsp;services
             </h1>
              <p class='proposition'>
-              Find data about how people are treated by public services
+              As part of how services provided by government operate, they collect data on ethnicity. This data has been brought together to show how public services treat people from different backgrounds.
              </p>
             </div>
           </div>
