--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -7,7 +7,72 @@
   </ol>
 </div>
 
-<h1 class="heading-large"> Average GCSE results (Attainment 8)</h1>
+
+<div class='grid-row'>
+  <div class='column-two-thirds'>
+    <h1 class='heading-large'>
+      <span class='heading-secondary'>
+        Education
+      </span>
+      Average GCSE results – known as ‘Attainment&nbsp;8’
+    </h1>
+
+    <div class="metadata">
+      <dl>
+        <dt>Source:</dt>
+          <dd>
+            <a href="https://www.gov.uk/government/organisations/department-for-education">
+              Department of education
+            </a>
+          </dd>
+        <dt>Last updated:</dt>
+        <dd>
+          13 October 2016
+        </dd>
+      </dl>
+    </div>
+
+    <p>
+      Attainment 8 measures a student’s average grade across 8 subjects to give a measure of success across GCSE subjects and equivalent qualifications. 
+    </p>
+
+
+    <h2 class='table-name heading-medium'>
+      Attainment 8 score by race
+    </h2>
+    <table>
+      <thead class='visually-hidden'>
+        <tr>
+          <td>Race</td>
+          <td>Score</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Asian</td>
+          <td>5.25</td>
+        </tr>
+        <tr>
+          <td>Black</td>
+          <td>4.87</td>
+        </tr>
+        <tr>
+          <td>Chinese</td>
+          <td>6.24</td>
+        </tr>
+        <tr>
+          <td>Mixed</td>
+          <td>5.05</td>
+        </tr>
+        <tr>
+          <td>White</td>
+          <td>4.97</td>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+</div>
 
 <div class="grid-row question-tabs" id="navigation-tabs">
   <ul class="tabs-nav">
@@ -30,7 +95,7 @@
             Department for Education</a></dd>
             <dt>Last Updated: </dt> <dd>13/10/2016</dd>
           </dl>
-          <a href="#"> Download source data </a>
+          <a href="#">Download source data</a>
         </div>
       </div>
 
@@ -91,7 +156,7 @@
 </div>
 
 
-<div class="grid-row">
+<!--div class="grid-row">
   <div class="column-two-thirds">
      <h3 class="heading-medium"> Learn about this measure</h3>
 
@@ -290,7 +355,7 @@
 
 
 
-</div>
+</div-->
 
 <!-- Makes it run attainment js, extremely hacky fix this TODO: KASM -->
 <div id="attainment"></div>
