--- a/app/views/taxonomy_level/topics.html.erb
+++ b/app/views/taxonomy_level/topics.html.erb
@@ -13,19 +13,7 @@
 </div>
 
 <div class = "grid-row">
-  <div class = "column-third">
-    <div>
-      <h3 class="heading-medium">
-        Topics
-      </h3>
-      <ul class="list">
-        <li> <a href="/topics/all/<%= @race %>"> Entire public sector </a></li>
-        <% TaxonomyLevel.topics.each do |t| %>
-          <li> <a href="/topics/<%= t.id %>/<%= @race %>"> <%=t.display_name %> </a></li>
-        <% end %>
-      </ul>
-    </div>
-  </div>
+
 
   <div class="column-two-thirds">
     <h1 class = heading-xlarge>
@@ -38,30 +26,33 @@
       </p>
     <% end %>
 
-    <h3 class="heading-medium">
-      <%= @topic.measures.count %> measures available for <%= @topic.display_name %>
-    </h3>
+  </div>
+</div>
+<div class='grid-row'>
+  <div class='column-two-thirds'>
+      <div class="accordions-container container">
+        <% @topic.taxonomy_levels.each do |sub_topic| %>
+          <div class="accordion">
+            <div class="accordion__header">
+              <h2>
+                <button>
+                  <%= sub_topic.display_name %>
+                </button>
+              </h2>
+              <span class="plus-minus-icon"></span>
+            </div>
 
-    <div class= "factoid-list">
-      <% @topic.taxonomy_levels.each do |sub_topic| %>
-        <div class="row-container grid-row" >
-          <div class="column-whole">
-
-            <h3 class="heading-medium" id="<%= sub_topic.anchor %>">
-              <%= sub_topic.display_name %>
-            </h3>
-
-            <% sub_topic.measures.each do |f| %>
-              <ul class = "list">
-                <div class="row-description">
-                  <a href="/<%= f.name %>"><li> <%= f.description %></li></a>
-                </div>
-
-              </ul>
-            <% end %>
+            <div class='accordion__body'>
+              <% sub_topic.measures.each do |f| %>
+                <ul class = "list">
+                  <div class="row-description">
+                    <a href="/<%= f.name %>"><li> <%= f.description %></li></a>
+                  </div>
+                </ul>
+              <% end %>
+            </div>
           </div>
-        </div>
-      <% end %>
+        <% end %>
     </div>
   </div>
 </div>
