--- a/app/views/taxonomy_level/attainment8.html.erb
+++ b/app/views/taxonomy_level/attainment8.html.erb
@@ -36,7 +36,6 @@
       Attainment 8 measures a student’s average grade across 8 subjects to give a measure of success across GCSE subjects and equivalent qualifications. 
     </p>
 
-
     <h2 class='table-name heading-medium'>
       Attainment 8 score by race
     </h2>
@@ -48,25 +47,81 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>Asian</td>
-          <td>5.25</td>
-        </tr>
-        <tr>
-          <td>Black</td>
-          <td>4.87</td>
-        </tr>
-        <tr>
+        <tr class='primary'>
           <td>Chinese</td>
-          <td>6.24</td>
+          <td class='data'>6.24</td>
         </tr>
+        <tr class='primary with-children'>
+          <td><span class='breakdown-controller' data-target='breakdown-of-asian'>Asian</span></td>
+          <td class='data'>5.25</td>
+        </tr>
+        <tr class='race-breakdown breakdown-of-asian js-hidden'>
+          <td>Indian</td>
+          <td class='data'>5.70</td>
+        </tr>
+        <tr class='race-breakdown breakdown-of-asian js-hidden'>
+          <td>Pakistani</td>
+          <td class='data'>4.85</td>
+        </tr>
+        <tr class='race-breakdown breakdown-of-asian js-hidden'>
+          <td>Bangladeshi</td>
+          <td class='data'>5.21</td>
+        </tr>
+        <tr class='race-breakdown breakdown-of-asian js-hidden'>
+          <td>Any other Asian background</td>
+          <td class='data'>5.50</td>
+        </tr>
+        <tr class='primary with-children'>
+          <td><span class='breakdown-controller' data-taget='breakdown-of-mixed'>Mixed</span></td>
+          <td class='data'>5.05</td>
+        </tr>
+        <tr class='primary with-children'>
+          <td><span class='breakdown-controller' data-taget='breakdown-of-white'>White</span></td>
+          <td class='data'>4.97</td>
+        </tr>
+        <tr class='primary with-children'>
+          <td><span class='breakdown-controller' data-taget='breakdown-of-black'>Black</span></td>
+          <td class='data'>4.87</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <h2 class='table-name heading-medium'>
+      Attainment 8 score by race and gender
+    </h2>
+    <table>
+      <thead class=''>
         <tr>
+          <td></td>
+          <td class='data-title'>Female score</td>
+          <td class='data-title'>Male score</td>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class='primary'>
+          <td>Chinese</td>
+          <td class='data'>6.24</td>
+          <td class='data'>5.00</td>
+        </tr>
+        <tr class='primary'>
+          <td>Asian</td>
+          <td class='data'>5.25</td>
+          <td class='data'>5.00</td>
+        </tr>
+        <tr class='primary'>
           <td>Mixed</td>
-          <td>5.05</td>
+          <td class='data'>5.05</td>
+          <td class='data'>5.00</td>
         </tr>
-        <tr>
+        <tr class='primary'>
           <td>White</td>
-          <td>4.97</td>
+          <td class='data'>4.97</td>
+          <td class='data'>5.00</td>
+        </tr>
+        <tr class='primary'>
+          <td>Black</td>
+          <td class='data'>4.87</td>
+          <td class='data'>5.00</td>
         </tr>
       </tbody>
     </table>
