--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Race Disparity</title>
+  <title>Government data on ethnicity</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 
@@ -17,7 +17,7 @@
 
 <% content_for :inside_header do %>
   <div class="header-proposition" >
-    <a href="/" id="proposition-name" >Race disparity in the public sector</a>
+    <a href="/" id="proposition-name" >Government data on ethnicity</a>
   </div>
 <% end %>
 
