--- a/app/views/layouts/govuk_template.html.erb
+++ b/app/views/layouts/govuk_template.html.erb
@@ -76,8 +76,7 @@
           <div class = "grid-row">
             <div class= "column-two-thirds">
              <h1 class="heading-xlarge"> 
-              <!--%= @title %--> 
-              Data on race disparity in public&nbsp;services
+              Government data on ethnicity
             </h1>
              <p class='proposition'>
               As part of how services provided by government operate, they collect data on ethnicity. This data has been brought together to show how public services treat people from different backgrounds.
